--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,36 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-catboost
-xgboost
-dill
-# flask
-#-e .
+blinker==1.6.2
+catboost==1.2
+click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+dill==0.3.6
+Flask==2.3.2
+fonttools==4.39.4
+graphviz==0.20.1
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+kiwisolver==1.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+-e git+https://github.com/aps0611/mlproject.git@182830231f9b641de05858f08b43f02401c21ee6#egg=mlproject
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.2
+Pillow==9.5.0
+plotly==5.14.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+six==1.16.0
+tenacity==8.2.2
+threadpoolctl==3.1.0
+tzdata==2023.3
+Werkzeug==2.3.6
+xgboost==1.7.5
+zipp==3.15.0
